# neuland

./: Cargo.toml  README.md  cobertura.xml  tarpaulin-report.html  tarpaulin.toml
.github/workflows/: build-and-test.yml  coverage.yml
src/: lib.rs
src/io/graphml/: mod.rs
src/model/: attribute.rs  attributes.rs  edge.rs  graph.rs  mod.rs  node.rs  query.rs
src/model/graph/: filter.rs  find.rs  mod.rs  util.rs
src/query/matcher/: eq_matcher.rs  mod.rs
tests/: attributes.rs  find.rs  graph.rs  tests.rs
tests/examples/: family.rs  generic.rs  import.rs  mod.rs
tests/find/: query.rs
tests/utils/: mod.rs  rnd.rs
