[package]
name = "neuland"
version = "0.1.0"
authors = ["Florian Richter <floririchte@gmail.com>"]
edition = "2018"
repository = "https://github.com/floric/neuland"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.3.0"
quick-xml = "0.18.1"
multimap="0.8.2"
rand="0.7.3"
array_tool="1.0.3"